[package]
name = "rdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bincode = "1.3"
rand = {version="0.8", features=["small_rng"]}
tokio = { version = "1", features = ["full"] }
